2005-11-07  Ales Hakl  <ales at hakl dot net>

	* bootstrap.sh: Added autoheader

2005-11-06  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_ctx_define): Works like scheme's define
	i.e. fails when variable is already defined in current environment

	* configure.ac: Support for config.h
	
2005-10-30  Ales Hakl  <ales at hakl dot net>

	* src/load.c (dfsch_load_so): Binary modules loading support

2005-09-03  Ales Hakl  <ales at hakl dot net>

	* configure.ac: Added option for profiling (need to be used in 
	conjunction with --disable-shared)

2005-08-16  Ales Hakl  <ales at hakl dot net>

	* src/load.c (dfsch_read_scm_stream): BUGFIX: Correct counting of 
	lines longer then 8KiB

2005-08-14  Ales Hakl  <ales at hakl dot net>

	* Makefile.am (libdfsch_load_la_LIBADD): Explicitly link libdfsch

	* src/dfsch.c: Added eval and apply primitives
	(dfsch_make_context): added top-level-environment function
	(dfsch_make_context): Renamed env to current-environment

	* src/load.c (dfsch_load_scm_fd): Split core from dfsch_load_scm
	into separate function
	(dfsch_load_scm_stream): stdio streams based version (aware of
	line numbers)
	(dfsch_load_scm_...): Better error reporting 
	(load_callback): Generalized the thing - now  it's posible to load
	data by same code as is used for loading code.

	* dfsch/load.h: Added include guard

	* src/repl.c (command_exit): (exit) in interactive interpreter
	(requested by Pavel Kacha)

	* configure.ac: Check for some basic functions in libc
	Check for readline.

	* Makefile.am (dfsch_repl): Name clash between includes directory
	and interpreter binary. 

	* configure.ac: Check for gc.h and -lgc

2005-08-13  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_obj_write): Write out names of closures.

	* src/stream.c (consume_queue): Added one debugging output

	* src/dfsch.c (make_symbol): Similar problem in symbol handling

	* src/stream.c (dfsch_parser_create): BUGFIX: parser context